# AwareNote

./: .gitignore  Cargo.toml  LICENSE  README.en.md  README.md  TODO.md  app.py  app_config.toml  entry_point.py  test_cache.py
.trae/documents/: Fix Scroll Handling and Favorite Status Management.md  优化配置加载策略，实现单例配置模式.md  使用 Fast API 构建后端项目.md  修改缓存目录路径使用统一函数.md  内存缓存优化：重构数据库访问方式.md  数据库重构计划：三表结构实现分类嵌套和书籍关联.md  移除沉浸阅读器组件并添加Swiper路由.md  重构工具函数，添加通用函数根据配置自动选择同步或异步版本.md
config/: config.py  setting.json
database/: db.py
icon/: AppIcon.icns  MenuIcon.icns
models/: book.py  category.py
native-macos/: AwarenotesSettings.swift  Info.plist  SettingsInfo.plist
routers/: book.py  category.py  custom_category.py  settings.py
scanner/: scanner.py
scripts/: build-macos-app.sh
src/: config.rs  domain.rs  error.rs  handlers.rs  lib.rs  main.rs  middleware.rs  routes.rs  runtime.rs  scanner.rs  service.rs
src/domain/: book_files.rs  categories.rs  libraries.rs  prelude.rs
src/frontend/: config.html  img_book_detail.html  img_swiper.html  index.html  pdf_book_detail.html  pdf_swiper.html
src/handlers/: books.rs  categories.rs  config.rs  system.rs
src/routes/: books.rs  categories.rs  config.rs  frontend.rs  system.rs
src/scanner/: engine.rs  pdf.rs  strategy.rs  types.rs
src/service/: assets.rs  database.rs  memory.rs  restart.rs
static/: config.html  img_book_detail.html  img_swiper.html  index.html  package-lock.json  package.json  pdf_book_detail.html  pdf_swiper.html
utils/: cache_utils.py  image_utils.py  pdf_utils.py  pool_manager.py
(+1 files in other folders)
