[package]
name = "auxm"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.5", features = ["trace", "cors", "fs"] }
thiserror = "1"
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
filetime = "0.2"
mupdf = "0.6.0"
image = "0.25"
fast_image_resize = "6.0.0"
sysinfo = "0.37"
libc = "0.2"
jemallocator = "0.5"
tao = "0.34"
tray-icon = "0.21"

[dev-dependencies]
tempfile = "3"
